Fixed methods for compatibility issues.